# Discord-OTP-Forcer

./: .env  .gitconfig  .gitignore  LICENSE  README.md  SECURITY.md  dependencies.txt  main.py  pyproject.toml  requirements.txt  start.bat
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml  testing.yml
config/: account.yml  program.yml
docs/: Home.md  How-to-setup-and-use.md  Ideas.md  Troubleshooting.md  Useful-hacks.md  config_possibilities.txt
scripts/Windows/: setup.bat  setup.cmd  start.bat  start.cmd  uninstall_dependencies.cmd  uninstall_requirements.bat  uninstall_requirements.cmd  update_dependencies.cmd
src/: backend.py  main.py
src/auth/: captcha.py  code_errors.py
src/lib/: check_updates.py  codegen.py  exceptions.py  logcreation.py  textcolor.py  thorium_binary.py  types.py
src/lib/js_scripts/: HardenWebStorage.js
tools/: convert-config.py
user/: cfg.yml
