[project]
name = "Discord-OTP-Forcer"
version = "0.3.5"
description = "Selenium based discord OTP forcer"
requires-python = ">=3.11"
dependencies = [
    "seleniumbase==4.48.0",
    "PyYAML==6.0.3",
    "stackprinter==0.2.12",
    "loguru==0.7.3",
    "regex-string-generator==0.1.0",
]

[project.optional-dependencies]
testing = [
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "coverage==7.13.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.uv]
package = false

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false

[tool.ruff.lint]
ignore = ["E701", "F841"]

[tool.ruff.format]
quote-style = "preserve"
line-ending = "cr-lf"
exclude = ["src/lib/types.py"]

[tool.ruff]
line-length = 160
